# github-planter

./: .gitignore  .markdownlint-cli2.yaml  LICENSE  README.md  Taskfile.yml  log.txt  renovate.json
.devcontainer/: Dockerfile  devbox.json  devbox_install.sh  devcontainer.json
.github/workflows/: build-docker-image.yaml  capture-screeenshot.yaml  planting.yml  renovate-pr-check.yaml
apps/: Dockerfile  pyproject.toml
apps/capture_screenshot/: Dockerfile  pyproject.toml
apps/src/: capture_screenshot.py
