[project]
name = "github-planter-capture-screenshot"
version = "0.1.0"
description = ""
requires-python = ">=3.11"
dependencies = [
  # 
  "click>=8.2.1",
  "playwright>=1.52.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.scripts]
capture-screenshot = "main:main"
